Added And Configured paperclip Gem And Styling Posts#Index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,9 @@
 body{
 	margin-top: 75px;
 }
+h5{
+	font-family: 'Poppins', sans-serif;
+}
 .navbar-dark{
 	background-image: linear-gradient(to right,$blue, $pink) !important;
 	color: $white !important;
