--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,9 +1,13 @@
-<%= form_for @post do |f| %>
+<%= form_for @post,html: { multipart: true } do |f| %>
 	<p>
 		<%= f.label :title %><br>
 		<%= f.text_field :title %>
 	</p>
 
+	<p>
+		<%= f.label :image %><br>
+		<%= f.file_field :image %>
+	</p>
 	<p>
 		<%= f.label :body %><br>
 		<%= f.text_area :body %>
