--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,3 +5,8 @@
 	| <%= link_to "Back", root_path %>
 </p>
 <p><%= @post.body %></p>
+<hr>
+<p><%= @post.comments.count %> Comments</p>
+<%= render @post.comments %>
+<p>Add a new comment:</p>
+<%= render 'comments/form'%>
