--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "variables";
 body{
 	margin-top: 75px;
+	background-color: #ffffff;
 }
 h5{
 	font-family: 'Poppins', sans-serif;
@@ -16,7 +17,34 @@ h5{
 .navbar-nav .nav-link {
     color: #fff !important;
 }
+.form-control{
+	border-radius: 0;
+}
 
-.custom{
+.btn-primary{
+	border: 0;
+}
+.custom, .custom:active{
 	border-radius: 3px;
+	background-image: linear-gradient(to right,$blue, $pink) !important;
+}
+.comment-wrapper{
+	padding-left: 5px;
+	padding-bottom: 5px;
+}
+.date{
+	font-size: 12px;
+	margin-bottom: 0px;
+}
+.divide{
+	width:10px;
+}
+.divider{
+    height: 38px;
+    border-radius: 0;
+    width: 3px;
+}
+.customs, .customs:active{
+	border-radius: 3px;
+	background-image: linear-gradient(to right, #2980B9, #6DD5FA);
 }
