--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,16 +1,19 @@
-<%= form_for ([@post, @post.comments.build]) do |f| %>
-	<div class="form-group">
-		<p>
-			<%= f.label :name %><br>
-			<%= f.text_field :name %>
-		</p>
+<div class="row">
+	<div class="col-md-6">
+		<%= form_for ([@post, @post.comments.build]) do |f| %>
+			<div class="form-group">
+				<p>
+					<%= f.label :name %><br>
+					<%= f.text_field :name, :class=>'form-control' %>
+				</p>
+			</div>
+			<div class="form-group">
+				<p>
+					<%= f.label :body %><br>
+					<%= f.text_area :body, :class=>'form-control', :rows=>'6' %>
+				</p>
+				<%= f.submit "Submit", :class=>"btn btn-primary custom"%>
+			</div>
+		<% end %>
 	</div>
-	<div class="form-group">
-		<p>
-			<%= f.label :body %><br>
-			<%= f.text_area :body %>
-		</p>
-		<br>
-		<%= f.submit "Submit", :class=>"btn btn-primary"%>
-	</div>
-<% end %>
+</div>
