--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,7 +21,7 @@
 	</div>
 
 	<p>
-		<%= f.submit "Submit" , :class=>'btn btn-success'%>
-		<%= link_to "Cancel", root_path , :class=>'btn btn-secondary'%>
+		<%= f.submit "Submit" , :class=>'btn btn-primary custom'%>
+		<%= link_to "Cancel", root_path , :class=>'btn btn-primary customs', :style=>'margin-left:5px'%>
 	</p>
 <% end %>
