Fixed Active State of Navbar Links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,8 @@ h5{
 .navbar-brand{
 	font-weight: bold;
 }
-.navbar-nav .nav-link {
-    color: #fff !important;
+.navbar-nav .nav-item:active {
+    font-weight: bold;
 }
 .form-control{
 	border-radius: 0;
