--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,14 +7,14 @@
 	  </button>
   	<div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+      <li class="nav-item <%= yield(:blog_active)%> %>">
+        <%= link_to "Blog", root_path, :class=>'nav-link'%>
       </li>
-            <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+      <li class="nav-item <%= yield(:about_active)%>">
+        <%= link_to "About", about_path, :class=>'nav-link'%>
       </li>
-            <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+      <li class="nav-item <%= yield(:contact_active)%>">
+        <%= link_to "Contact", contact_path, :class=>'nav-link'%>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
