--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,13 +16,16 @@
       <li class="nav-item <%= yield(:contact_active)%>">
         <%= link_to "Contact", contact_path, :class=>'nav-link'%>
       </li>
+      <% if user_signed_in?%>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-cog"></i>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        	<%= link_to "New Post", new_post_path, :class=>'dropdown-item' %>
-          	<a class="dropdown-item" href="#">Log-Out</a>
+          
+            <%= link_to "New Post", new_post_path, :class=>'dropdown-item' %>
+        	 <%= link_to('Log-Out', destroy_user_session_path,:class=>'dropdown-item', method: :delete) %>
+          <% end %>
         </div>
       </li>
     </ul>
