--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
   <body>
     <%= render 'layouts/navbar'%>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
   	<div class="container">
   		<%= yield %>
   	</div>
